--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "find-recipe",
   "homepage": ".",
+  "outputDirectory": "dist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
